
* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

* bam(...,discrete=TRUE) does not currently deal with the corner case in 
  which no smoother is penalized. Also there is no option to use the identical
  discretization to that used in fitting when predicting.

1.8-35

* gumbls initialization improved.

1.8-34

* 'gam.mh' proposal df typo fix and help file '%*%' -> '\%*\*' fix. Thanks 
   Len Thomas.

* various random number generation calls in rd functions in families could 
  fail if simulating one point - fixed.

* gp smooths can now be specified to be strictly stationary (see ?gp.smooth)

* fix to predict.bamd bug in handling fixed effect contrasts (wrong contrast 
  could be used for prediction, if non-default used in fitting). Thanks to
  Jalal Al-Tamimi.

* predict.bamd modified to catch case where all prediction data is NA

* predict.gam modified to allow NA to be a factor level.

1.8-33

* 'inline' -> 'static inline' error fix - caused installation failure on some 
   platforms.  

1.8-32

** bam(...,discrete=TRUE) now uses discretization on the parametric model
   components as well as the smooths. 

* 'gumbls' family added for Gumbel location scale models.

* 'shash' location scale and shape family added.

* psum.chisq function added to compute c.d.f. of weighted sums of chi-squared
  r.v.s using method of Davies, 1980. This is now used for computing p-values 
  in summary.gam in place of the Liu et al, 2009 approximation.  

* score and Schoenfeld residuals added for cox.ph to facilitate PH assumption
  checking (see ?cox.ph).

* added 'gam.mh' for posterior dampling from models fitted with 'gam'.

* 'ocat' upgraded to not ignore weights.

* added multivariate t and Gaussian densities and multivariate t generation. 

* fix to predict.bamd to correct handling of `terms' and `exclude' arguments.

* A recent lme change broke gamm offset handling. Fixed. 