@@ -31,6 +31,14 @@ present, and reparameterization needs checking (also for bam).
 
 * gumbls initialization improved.
 
+* Modification so that smooths can insist on not being reparameterized when 
+  called using default bam methods, by having a 'repara' element set to FALSE 
+  in the object returned by the smooth constructor.
+
+* Modification so that smooths can have the summation convention for matrix
+  arguments turned off, by having an 'xt$sumConv' element set to FALSE in the 
+  'xt' argument of 's'.
+
 1.8-34
 
 * 'gam.mh' proposal df typo fix and help file '%*%' -> '\%*\*' fix. Thanks 
